Wed Dec 10 13:17:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SSL_SAP/SSL-server-poll.cpp:
          Added #include of ace/OS_NS_poll to get poll stuff

Wed Dec 10 07:09:10 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/dseventlogadmin.mpb:

          The dseventlogadmin base project should also inherit from event.

Wed Dec 10 12:56:47 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SSL_SAP/SSL-server-fancy.cpp:
          Added #include of OS_NS_sys_select.h to get ACE_OS::select

Wed Dec 10 12:50:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SSL_SAP/SSL-client.h:
          Fixed casing of include

Wed Dec 10 10:20:48 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/NT_Service.cpp (wait_for_service_state):
          Initialize last_state and last_check_point with 0 to fix MinGW
          compiler warnings.

Wed Dec 10  9:31:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Task_Ex_T.h:
          Removed the ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION_EXPORT directive.
          It is meaningless to define it with ACE_MESSAGE_TYPE. Thanks to
          Kobi Cohen-Arazi <kobi-co@barak-online.net> for reporting this.

Wed Dec 10  9:18:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/TTCP/ACE-C++/TTCP_ACE_C++.mpc:
          Removed this file from the repo. This performance-tests contains
          so many non-portable code that it is impossible to build it on
          all the platforms we have.

Wed Dec 10  8:39:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Tests.bor:
          Added TSS_Static_Test

Tue Dec  9 13:00:30 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/DependencyGenerator/DependencyEditor.pm:
        * bin/DependencyGenerator/DependencyGenerator.pm:
        * bin/DependencyGenerator/DependencyWriter.pm: